# enterprise-context-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.enterprise.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: DEPLOY.md  enterprise-context-platform-market-update.md  enterprise-context-platform-problem-statement-v3.md  enterprise-context-platform-problem-statement-v4.md  enterprise-context-platform-spec-v3.md  enterprise-context-platform-spec-v4.md
docs/demo/: DEMO-RUNBOOK.md  claude_desktop_config.example.json  index.html  studio.html
docs/diagrams/: architecture.html  comparison.html  trace.html
observer/: README.md  index.html  package.json  vercel.json  vite.config.ts
observer/src/: App.tsx  useTelemetryStream.test.tsx  useTelemetryStream.ts  vite-env.d.ts
scripts/: demo.py  demo_fcf.py  demo_preflight.sh  init_db.py  load_smoke.py  run_golden_eval.py  security_smoke.py  seed_data.py  seed_remote.sh
src/: config.py  main.py  models.py
src/context/: embeddings.py  fiscal.py  graph.py  registry.py  vector.py
src/evals/: golden_queries.py  golden_queries.yaml
src/federation/: __init__.py  base.py  native_adapter.py  orchestrator.py
src/governance/: audit.py  policy.py
tests/: conftest.py  test_api.py  test_cube_executor.py  test_engine_authorization.py  test_federation.py  test_precedent_override.py  test_telemetry_bus.py  test_telemetry_stream.py
ui/: .gitignore  README.md  next.config.js  package.json  tailwind.config.ts
(+46 files in other folders)
